--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+display-interface-spi = "0.5.0"
+embedded-graphics = "0.8.1"
+embedded-hal-bus = "0.3.0"
+esp-alloc = { version = "0.9.0", features = ["esp32c3"] }
 esp-backtrace = { version = "0.18.0", features = [
     "esp32c3",
     "panic-handler",
@@ -17,3 +21,4 @@ esp-hal = { version = "1.0.0-rc.1",features = [
     "unstable",
 ] }
 esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
+ili9341 = "0.6.0"
