--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "blinky"
+name = "meepy"
 version = "0.1.0"
-authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
+authors = ["kittywitch"]
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 
 [dependencies]
 display-interface-spi = "0.5.0"
 embedded-graphics = "0.8.1"
 embedded-hal-bus = "0.3.0"
+embedded-layout = "0.4.2"
 esp-alloc = { version = "0.9.0", features = ["esp32c3"] }
 esp-backtrace = { version = "0.18.0", features = [
     "esp32c3",
