--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,13 @@ license = "MIT"
 
 [dependencies]
 display-interface-spi = "0.5.0"
+embassy-executor = "0.9.1"
+embassy-net = { version = "0.7.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embassy-time = "0.5.0"
 embedded-graphics = "0.8.1"
 embedded-hal-bus = "0.3.0"
 embedded-layout = "0.4.2"
+embedded-text = "0.7.3"
 esp-alloc = { version = "0.9.0", features = ["esp32c3"] }
 esp-backtrace = { version = "0.18.0", features = [
     "esp32c3",
@@ -17,9 +21,9 @@ esp-backtrace = { version = "0.18.0", features = [
     "println",
 ]}
 esp-bootloader-esp-idf  = { version = "0.3.0", features = ["esp32c3"]}
-esp-hal = { version = "1.0.0-rc.1",features = [
-    "esp32c3",
-    "unstable",
-] }
+esp-hal = { version = "1.0.0-rc.1", features = ["esp32c3", "unstable"] }
 esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
+esp-radio = { version = "0.16.0", features = ["smoltcp", "wifi", "esp32c3", "unstable"] }
+esp-rtos = { version = "0.1.1", features = ["esp32c3", "embassy"] }
 ili9341 = "0.6.0"
+static_cell = "2.1.1"
